fll-live-initramfs (20251214.2) UNRELEASED; urgency=medium

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Dec 2025 20:39:45 +0100

fll-live-initramfs (20251214.1) unstable; urgency=medium

  [ Kel Modderman ]
  * Switch to date release version numbering.
  * Add initial, optimistic, speculative, and untested dracut configuration
    and associate module as a starting point for future migration from
    initramfs-tools.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Dec 2025 20:39:27 +0100

fll-live-initramfs (5.0.0) unstable; urgency=medium

  [ Kel Modderman ]
  * Simplify live media mount logic so that iso9660fs or iso file logic
    is used when fromiso cheatcode is given, or persist_uuid cheatcode is
    not given.
  * Remove live hashsum logic - one is calculated for the iso media and
    that is enough.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 27 Nov 2025 02:27:52 +0100

fll-live-initramfs (4.0.24) unstable; urgency=medium

  [ Kel Modderman ]
  * If fromhd= boot parameter is used, do not attempt to boot directly from
    partition by uuid to preserve fromiso functionality.
  * Don't attempt to mount by partition by uuid when iso uuid matches.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 22 Oct 2025 21:33:55 +0200

fll-live-initramfs (4.0.23) unstable; urgency=medium

  [ Kel Modderman ]
  * Tweak logic around handling of boot process when rootfs_uuid is given
    as a boot parameter to reject all block devices without a matching
    ID_FS_UUID.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 10 Oct 2025 18:28:35 +0200

fll-live-initramfs (4.0.22) unstable; urgency=medium

  [ Kel Modderman ]
  * Remove uuid= cheatcode handling, I had put it in the incorrect spot
    anyhow.
  * Remove squashfs from filesystem whitelist for device/partition
    matching.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 08 Oct 2025 00:52:14 +0200

fll-live-initramfs (4.0.21) unstable; urgency=medium

  [ Kel Modderman ]