@@ -2,6 +2,10 @@
 
 PATH=/usr/sbin:/usr/bin:/sbin:/bin
 
-fll_blockdev_detect --monitor --execp=/sbin/fll-live-root
+if fll_blockdev_detect --monitor --execp=/sbin/fll-live-root; then
+    ln -s null /dev/root
+    : > /run/initramfs/.need_shutdown
+    exit 0
+fi
 
-exit $?
+exit 1
