@@ -1,6 +1,12 @@
 fll-live-initramfs (20251214.2) UNRELEASED; urgency=medium
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
+
+  [ Kel Modderman ]
+  * Speculatively set a couple of dracut specific markers for:
+    - declaring root was found
+    - declaring systemd shutdown (exitrd) should be setup
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Dec 2025 20:39:45 +0100
 
